--- a/configs/xiaomi/platina/4.4
+++ b/configs/xiaomi/platina/4.4
@@ -1,5 +1,5 @@
 # Source common kernel config
-source "${CONFIGS_DIR}/xiaomi-sdm660-4.14"
+source "${CONFIGS_DIR}/xiaomi/sdm660-common/4.4"
 
 # Device info
 DEVICE_CODENAME=platina
